# elastic-harmonic

./: Makefile  README.md  fims_get_periods.cc  harmonic.cc  harmonic.h  scheduler.cc  scheduler_test.cc  synthetic_tasksets.cc  task.cc  task.h
enumerate_phi/: Makefile  chain_counts.m  chain_counts.txt  enumerate_phi.cc  enumerate_phi.ipynb  import_chain_counts.m
fims/: fims.ipynb
fims/fims_elasticity_values_assignment/: CMakeLists.txt  main.cpp
fims/fims_elasticity_values_assignment/configuration/: config.json
fims/fims_elasticity_values_assignment/header/: data_inversion.h  math_helplers.h  paramt_FIMS.h
fims/fims_elasticity_values_assignment/result_/: compute_hk_elasticity.py  compute_image_elasticity.py  compute_inversion_elasticity.py  n_Dp_fixed_hk_1000.txt  n_Dp_fixed_hk_1500.txt  n_Dp_fixed_hk_2000.txt  n_Dp_fixed_hk_2500.txt  n_Dp_fixed_hk_3000.txt  n_Dp_fixed_hk_3500.txt  n_Dp_fixed_hk_4000.txt  n_Dp_fixed_hk_4500.txt  n_Dp_fixed_hk_5000.txt  n_Dp_fixed_image_100.txt  n_Dp_fixed_image_1000.txt  n_Dp_fixed_image_200.txt  n_Dp_fixed_image_300.txt  n_Dp_fixed_image_400.txt  n_Dp_fixed_image_500.txt  n_Dp_fixed_image_600.txt  n_Dp_fixed_image_700.txt  n_Dp_fixed_image_800.txt  n_Dp_fixed_image_900.txt  n_Dp_fixed_inversion_10000.txt  n_Dp_fixed_inversion_2000.txt  n_Dp_fixed_inversion_3000.txt  n_Dp_fixed_inversion_4000.txt  n_Dp_fixed_inversion_5000.txt  n_Dp_fixed_inversion_6000.txt  n_Dp_fixed_inversion_7000.txt  n_Dp_fixed_inversion_8000.txt  n_Dp_fixed_inversion_9000.txt  running_script.py
fims/fims_elasticity_values_assignment/result_/hk_elasticity_result/: compute_hk_elasticity.py  n_Dp_fixed_cpp_hk_10.txt  n_Dp_fixed_cpp_hk_2.txt  n_Dp_fixed_cpp_hk_3.txt  n_Dp_fixed_cpp_hk_4.txt  n_Dp_fixed_cpp_hk_5.txt  n_Dp_fixed_cpp_hk_8.txt
fims/fims_elasticity_values_assignment/result_/image_elasticity_result/: UTC_bnds_mat.csv  compute_image_elasticity.py  n_Dp_fixed_cpp_3stack.txt  n_Dp_fixed_cpp_4stack.txt  n_Dp_fixed_cpp_7stack.txt  time_bnds_cpp.csv
fims/fims_elasticity_values_assignment/result_/invertion_elasticity_result/: compute_inversion_elasticity.py  n_Dp_fixed_cpp_2sbin.txt  n_Dp_fixed_cpp_3sbin.txt  n_Dp_fixed_cpp_8sbin.txt  n_Dp_fixed_mat.csv
fims/fims_elasticity_values_assignment/source/: data_inversion.cpp  image_processor.cpp  read_house_keeping.cpp
fims/fims_elasticity_values_assignment/transfer_function/case_1121/position2Zp_s/: yg.csv
fims/fims_elasticity_values_assignment/transfer_function/case_1361/combined_transfer_function/: omega4.csv
fims/fims_elasticity_values_assignment/transfer_function/case_1551/combined_transfer_function/: omega1.csv
fims/over_head/: Makefile  (+1 more)
(+1724 files in other folders)
